# qlom

./: .cproject  .gitignore  .project  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.ac  qlom.desktop  qlom.pro  qlom.xml
build-aux/: autotroll.mk
doc/: Doxyfile
m4/: autotroll.m4  mm-pkg.m4
src/: connection_dialog.cc  connection_dialog.h  document.cc  document.h  error.cc  error.h  error_reporter.cc  error_reporter.h  glom_document.cc  glom_document.h  glom_layout_delegate.h  glom_layout_delegates.cc  glom_layout_delegates.h  glom_layout_model.cc  glom_layout_model.h  glom_list_layout_model.cc  glom_list_layout_model.h  glom_model.cc  glom_model.h  glom_relationship.cc  glom_relationship.h  glom_table.cc  glom_table.h  glom_table_model.cc  glom_table_model.h  glom_tables_model.cc  glom_tables_model.h  layout_delegates.cc  layout_delegates.h  list_layout_model.cc  list_layout_model.h  main_window.cc  main_window.h  open_sqlite.cc  open_sqlite.h  qlom.cc  qlom_error.cc  qlom_error.h  qlom_query_builder.cc  qlom_query_builder.h  (+10 more)
src/gui/: list_view.cc  list_view.h  main_window.cc  main_window.h
tests/data/: readme.txt
tests/data/sqlite/: db-not-supported.glom  empty.glom  example.glom  glom_test.db  invalid-db.glom  no-list-model.glom
